# ACArl

./: .gitignore  README.md  README_OLD.md  check_git_files.py  cluster.py  eval.py  lab_gen_acarl.py  main.py  preprocess_flat_brats.py  pyproject.toml  run_ablation_blocks.sh  run_ablation_mcd.sh  run_baseline_acarl_full.sh  run_pipeline.sh  run_stages_5_7.sh  test_mask_metadata.json  test_train_3batches.sh  test_train_small.py  train.py  train_unet.py  train_unet_acarl.py
brats/: dataset.py  preprocess.py
kits/: dataset.py  preprocess.py
lits/: dataset.py  preprocess.py
mcd/: __init__.py  dataset.py  preprocess.py
samus/: __init__.py
samus/modeling/: acarl.py
utils/: metrics.py  pytuils.py
